# etl-ibge

./: .gitignore  README.md  pyproject.toml
src/etl_ibge/: config.py  etl.py
