[project]
name = "etl-ibge"
version = "0.1.0"
description = "ETL para dados do IBGE"
authors = [
    {name = "Eduardo Lopes",email = "eduardopnm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "etl_ibge", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
